[gd_scene load_steps=8 format=2]

[ext_resource path="res://World/Screen/GameOverFinal.gd" type="Script" id=1]
[ext_resource path="res://World/Images/bg2.png" type="Texture" id=2]
[ext_resource path="res://World/Font/DigitalDisco.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 32
font_data = ExtResource( 3 )

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0627451, 0.027451, 0.2, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="4" type="Sprite" parent="ColorRect"]
modulate = Color( 1, 1, 1, 0.517647 )
position = Vector2( 160.255, 94 )
scale = Vector2( 0.292365, 0.228839 )
texture = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -46.0
margin_top = -15.0
margin_right = 46.0
margin_bottom = 59.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TryAgain" type="Button" parent="VBoxContainer"]
margin_right = 92.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 1 )
text = "Try Again?"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MM" type="Button" parent="VBoxContainer"]
margin_top = 26.0
margin_right = 92.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 2 )
text = "Main Menu"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit" type="Button" parent="VBoxContainer"]
margin_top = 52.0
margin_right = 92.0
margin_bottom = 74.0
custom_fonts/font = SubResource( 3 )
text = "Exit"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -80.0
margin_top = 39.0
margin_right = 80.0
margin_bottom = 71.0
custom_fonts/font = SubResource( 4 )
text = "Game Over"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="VBoxContainer/TryAgain" to="." method="_on_TryAgain_pressed"]
[connection signal="pressed" from="VBoxContainer/MM" to="." method="_on_MM_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="_on_Exit_pressed"]
